--- a/style.css
+++ b/style.css
@@ -2,18 +2,23 @@ body {background-color: #6d6875 ; font-family: inherit;
     
 
 }
-.medium {background-color: #b5838d; inline-size: 60mm; 
+.medium {background-color: #b5838d;
 
 }
-.large {background-color: #e5989b; inline-size: 100mm; flex: 2;
+.large {background-color: #e5989b;
 }
 .small {
-    background-color: #ffb4a2; inline-size: 50mm;
+    background-color: #ffb4a2;
 }
-.contact{background-color: #ffcdb2; flex-wrap: wrap; inline-size: 285mm; margin-top: 10mm;
+.contact{background-color: #ffcdb2; flex-wrap: wrap; inline-size: 500mm; margin-top: 10mm;
 
-} .pizza{ padding: 10mm; border: 1mm solid black; border-radius: 5mm
-; display: inline-block; align-content: center; margin-left: 20mm; display: inline-flexbox; float: left;
+text-align: center;} 
+.pizza{ padding: 10mm; border: 1mm solid rgb(41, 40, 40); border-radius: 5mm
+; display: inline-block; align-content: center; margin-left: 10mm; display: inline-flexbox; 
 
-} .header{text-align: center; font-size: 20mm; font-style: oblique;
+} 
+.header{text-align: center; font-size: 20mm; font-style: oblique;
+}   
+.pizza{
+ margin-right: 0mm;
 }
