--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {background-color: #6d6875 ; font-family: inherit;
     
 
 }
-.medium {background-color: #b5838d; height: 50mm;
+.medium {background-color: #b5838d; height: 50mm; width: 10mm;
 
 }
-.large {background-color: #e5989b; height: 50mm;
+.large {background-color: #e5989b; height: 50mm; width: 10mm;
 }
 .small {
-    background-color: #ffb4a2; height: 50mm;
+    background-color: #ffb4a2; height: 50mm; width: 10mm;
 }
 .contact{background-color: #ffcdb2; flex-wrap: wrap; inline-size: 500mm; margin-top: 10mm;
 
