--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {background-color: #6d6875 ; font-family: inherit;
 .small {
     background-color: #ffb4a2; height: 5mm; width: 10mm;
 }
-.contact{background-color: #ffcdb2; flex-wrap: wrap; inline-size: 500mm; margin-top: 10mm;
+.contact{background-color: #ffcdb2; margin-top: 10mm;
 
 text-align: center;} 
-.pizza{ padding: 10mm; border: 1mm solid rgb(41, 40, 40); border-radius: 5mm
-; display: inline-block; align-content: center; margin-left: 10mm; display: inline-flexbox; 
+.pizza{ padding: 10mm; border: 1mm solid rgb(41, 40, 40);
+; align-content: center; display: inline-flexbox; 
 
 } 
 .header{text-align: center; font-size: 20mm; font-style: oblique;
