--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ body {background-color: #6d6875 ; font-family: inherit;
     
 
 }
-.medium {background-color: #b5838d; height: 20mm; width: 10mm;
+.medium {background-color: #b5838d; 
 
 }
-.large {background-color: #e5989b; height: 20mm; width: 10mm;
+.large {background-color: #e5989b;
 }
 .small {
-    background-color: #ffb4a2; height: 20mm; width: 10mm;
+    background-color: #ffb4a2; 
 }
 .contact{background-color: #ffcdb2; margin-top: 10mm;
 
 text-align: center;} 
 .pizza{ padding: 10mm; border: 1mm solid rgb(41, 40, 40);
-; align-content: center; display: inline-flexbox; 
+; align-content: center; display: inline-flexbox; display: inline-block;
 
 } 
 .header{text-align: center; font-size: 20mm; font-style: oblique;
