--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ text-align: center;}
 .pizza{ padding: 10mm; border: 1mm solid rgb(41, 40, 40);
 ; align-content: center;
 } 
-.block { width: 25%; display: inline-block;
+.block { width: 25%; display: inline-block; height: 50%;
 
 }
 .header{text-align: center; font-size: 20mm; font-style: oblique;
