--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ text-align: center;}
 ; align-content: center;
 } 
 .block{
-    display: inline-block;
+    display: inline-block; width: 25%;
 }
 .header{text-align: center; font-size: 20mm; font-style: oblique;
 }   
